--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -16,6 +16,8 @@ jobs:
         with:
           node-version: 18
           cache: yarn
+          working-directory: docs/vame-docs-app
+          cache-dependency-path: docs/vame-docs/app
 
       - name: Install dependencies
         run: cd docs/vame-docs-app && yarn install --frozen-lockfile
