--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -10,6 +10,9 @@ jobs:
   deploy:
     name: Deploy VAME Docs to GitHub Pages
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -17,7 +20,7 @@ jobs:
           node-version: 18
           cache: yarn
           working-directory: docs/vame-docs-app
-          cache-dependency-path: docs/vame-docs/app/yarn.lock
+          cache-dependency-path: docs/vame-docs-app/yarn.lock
 
       - name: Install dependencies
         run: cd docs/vame-docs-app && yarn install --frozen-lockfile
