--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -13,7 +13,9 @@ jobs:
     permissions:
       contents: write
       pages: write
+      actions: write
       id-token: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
