--- a/.github/workflows/test-deploy.yaml
+++ b/.github/workflows/test-deploy.yaml
@@ -1,10 +1,12 @@
 name: Test deployment
 
 on:
+  push: # todo remove
+    branches:
+      - docs/adding-docs-app
   pull_request:
     branches:
       - docs
-      - docs/adding-docs-app # todo remove
 
 jobs:
   test-deploy:
