--- a/.github/workflows/test-deploy.yaml
+++ b/.github/workflows/test-deploy.yaml
@@ -20,16 +20,16 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install VAME Project.
-        run: |
-          python -m pip install --upgrade pip
-          pip install .
+      # - name: Install VAME Project.
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install .
 
       - name: Install docs dependencies.
         run: pip install -r docs/requirements-docs.txt
 
       - name: Auto generate API Reference.
-        run: pydoc-markdown
+        run: cd docs && pydoc-markdown
       - uses: actions/setup-node@v3
         with:
           node-version: 18
