--- a/VAME.yaml
+++ b/VAME.yaml
@@ -2,11 +2,29 @@
 #
 # install: conda env create -f VAME.yaml
 # update:  conda env update -f VAME.yaml
-name: vame
+name: VAME
 channels:
+  - pytorch
   - defaults
 dependencies:
-  - python=3.11
+  - python=3.7
   - pip
+  - torchvision
+  - jupyter
+  - nb_conda
   - pip:
-      - -r requirements.txt
+    - pytest-shutil
+    - scipy
+    - numpy
+    - matplotlib
+    - pathlib
+    - pandas
+    - ruamel.yaml
+    - sklearn
+    - pyyaml
+    - opencv-python-headless
+    - h5py
+    - umap-learn
+    - networkx    
+    - tqdm
+    - hmmlearn
