--- a/.github/workflows/publish_main.yaml
+++ b/.github/workflows/publish_main.yaml
@@ -60,19 +60,17 @@ jobs:
 
       - name: Create GitHub Release
         if: env.TAG_EXISTS == 'false'
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.determine_tag.outputs.tag_name }}
-          release_name: ${{ steps.determine_tag.outputs.tag_name }}
-          draft: false
-          prerelease: false
+          name: ${{ steps.determine_tag.outputs.tag_name }}
           body: "Release for version ${{ steps.determine_tag.outputs.tag_name }}"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
 
       - name: Publish to PyPI
         if: env.TAG_EXISTS == 'false'
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: twine upload dist/*
