--- a/.github/workflows/publish_main.yaml
+++ b/.github/workflows/publish_main.yaml
@@ -54,9 +54,9 @@ jobs:
         if: env.TAG_EXISTS == 'true'
         run: |
           echo "Tag ${{ steps.determine_tag.outputs.tag_name }} already exists for this version. Cannot create a new release."
-          exit 1
 
       - name: Build package
+        if: env.TAG_EXISTS == 'false'
         run: python -m build
 
       - name: Create GitHub Release
