early stop tests

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -31,7 +31,7 @@ jobs:
           pip install -r tests/requirements-tests.txt --no-cache-dir
 
       - name: Run tests.
-        run: pytest --cov=src/vame --cov-report=xml --cov-report=term-missing -v
+        run: pytest --cov=src/vame --cov-report=xml --cov-report=term-missing -vx
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
