--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -5,7 +5,10 @@ on:
     branches:
       - main
       - dev
-      - preprocessing
+    paths:
+      - '.github/workflows/testing.yaml'
+      - 'src/**'
+      - 'tests/**'
 
 jobs:
   run:
